<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CaseStudyDescriptionActivity" >

    <GridLayout
        android:id="@+id/buttongridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3" 
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/customer_button_background"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerHeading" 
            android:layout_margin="2dp"
			/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colonstring" 
            android:layout_margin="2dp"
            />

        <TextView
            android:id="@+id/customerValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerTitleHeading"
            android:layout_margin="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colonstring" 
            android:layout_margin="2dp"
            />

        <TextView
            android:id="@+id/customerCaseStudyTitleValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/customerOrganizationHeading" 
            android:layout_margin="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colonstring" 
            android:layout_margin="2dp"
            />

        <TextView
            android:id="@+id/customerCaseStudyOrganizationValue"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            />
    </GridLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caseStudyDescription"
        android:textAppearance="?android:attr/textAppearanceListItemSmall" 
        android:layout_gravity="center"/>
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.46"
        android:scrollbars="vertical"
        android:background="@drawable/customer_button_background"
        android:padding="2dp">

        <TextView
            android:id="@+id/questionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" 
            android:layout_margin="2dp"
            android:padding="2dp"/>
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backPlayFromActivityDescription"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/BackPlayArea" />

        <Button
            android:id="@+id/optionsNavigate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/OptionsButtonText" />
    </LinearLayout>

</LinearLayout>