<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartPageActivity" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="1dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startPageStartButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/start_page_blue_button_style"
            android:text="@string/start_page_start_button" 
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/startPageAdminButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/start_page_blue_button_style"
            android:text="@string/start_page_admin_button" 
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/startPageAboutButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/start_page_blue_button_style"
            android:text="@string/start_page_about_button"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/startPageExitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/start_page_blue_button_style"
            android:text="@string/start_page_exit_button" 
            style="?android:attr/buttonBarButtonStyle"/>
        
    </LinearLayout>

</RelativeLayout>