<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdministrationNodeList$NodeDescriptionFragment"
    android:id="@+id/administrationDescriptionLayoutFragmentID" >

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administration_title_label" />

    <EditText
        android:id="@+id/adminTitleEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customer_button_background"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="2"
        android:padding="2dp"
        android:singleLine="false" />

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administration_organization_label" />

    <EditText
        android:id="@+id/adminOrganizationEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customer_button_background"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="2"
        android:padding="2dp"
        android:singleLine="false" />

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administration_description_label" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/adminDescriptionEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customer_button_background"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="7"
            android:padding="2dp"
            android:singleLine="false" />
        
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp" >
        
            <Button
            android:id="@+id/adminCancelChangesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/CancelButtonText" />
        
        <Button
            android:id="@+id/adminSaveChangesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/SaveButtonText" />
        
    </LinearLayout>

</LinearLayout>