<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptimalSolutionActivity" >

    <TextView
        android:id="@+id/optimalSolutionHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/optimalSolutionHeading"
        android:layout_margin="5dp"
        style="?android:attr/textAppearanceLarge"
        />

    <GridLayout
        android:id="@+id/optimalSolutionGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:columnCount="6"
        android:orientation="vertical"
        android:rowCount="6" >
    </GridLayout>

    <LinearLayout
        android:id="@+id/timeScorePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/onlyTimePanel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_text_view_time"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/optimalHoursMinutes"
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:layout_marginLeft="2dp"
                android:gravity="left|center_vertical"
                android:text="@string/startTime"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/optimalAMPM"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/amstring"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/optimalMoneyEarned"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_text_view_money"
            android:gravity="center_vertical|left"
            android:text="@string/moneyEarned"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/optimalSolutionBackButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuePlayArea" />
    </LinearLayout>

</LinearLayout>