<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topmostPlayAreaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayGridActivity" >

    <GridLayout
        android:id="@+id/buttongridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:orientation="vertical"
        android:rowCount="6" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
    </GridLayout>

    <LinearLayout
        android:id="@+id/controlTimeMoneyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <GridLayout
            android:id="@+id/navigationButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:columnCount="3"
            android:orientation="vertical"
            android:rowCount="3" >

            <Space />

            <Button
                android:id="@+id/leftNavigation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/navigation_left_button_background" />

            <Space />

            <Button
                android:id="@+id/upNavigation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/navigation_up_button_background" />

            <Button
                android:id="@+id/confirmSelection"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/confirm_button_background" />

            <Button
                android:id="@+id/downNavigation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/navigation_down_button_background" />

            <Space />

            <Button
                android:id="@+id/rightNavigation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/navigation_right_button_background" />

            <Space />
        </GridLayout>

        <LinearLayout
            android:id="@+id/timeScorePanel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="40dp"
            android:columnCount="1"
            android:orientation="vertical"
            android:rowCount="2" >

            <LinearLayout
                android:id="@+id/onlyTimePanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text_view_time"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/hoursMinutes"
                    android:layout_width="62dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="2dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/startTime"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AMPM"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/amstring"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/moneyEarned"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_text_view_money"
                android:gravity="center_vertical|left"
                android:text="@string/moneyEarned"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>